syntax = "proto3";

package cakelab.arflow_grpc.v1;

import "cakelab/arflow_grpc/v1/ar_trackable.proto";
import "cakelab/arflow_grpc/v1/vector3.proto";

option csharp_namespace = "CakeLab.ARFlow.Grpc.V1";

/// https://docs.unity3d.com/Packages/com.unity.xr.arfoundation@6.0/api/UnityEngine.XR.ARFoundation.ARPointCloud.html
message ARPointCloud {
  ARTrackable trackable = 1;
  repeated float confidence_values = 2;
  repeated uint64 identifiers = 3;
  repeated Vector3 positions = 4;
}
